crates/reinhardt-db-macros/tests/ui/fail/unsupported_backend.rs
use reinhardt_db_macros::{document, field};
use bson::oid::ObjectId;

#[document(collection = "users", backend = "postgres")]
struct User {
    #[field(primary_key)]
    id: ObjectId,
}
