crates/reinhardt-db-macros/tests/ui/fail/unsupported_backend.stderr
error: unsupported backend 'postgres', only 'mongodb' is supported
  --> tests/ui/fail/unsupported_backend.rs:5:3
   |
5  | #[document(collection = "users", backend = "postgres")]
   |   ^^^^^^^^
